스타일링 시장 상단 헤더 고정 및 메뉴 생성 기본적인 스타일링 간단하게 구현 중

--- a/renderer/public/styles/main/main.css
+++ b/renderer/public/styles/main/main.css
@@ -2,6 +2,29 @@
   padding: 30px;
   text-align: center;
   margin-top: 40px;
-  color: #7cc5d9;
+  color: #3DA2FF;
+  /* width: 50%; */
+}
+
+.chatroomlist_div {
+  text-align: center;
+  margin: auto;
+  margin-top: 220px;
+  color: #3DA2FF;
+  width: 60%;
+}
+
+.chatroomlist_list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.chatroomlist_link {
   width: 50%;
+  font-size: larger;
+  display: inline-block;
+  cursor: pointer;
+  line-height: 80px;
 }
