--- a/renderer/public/styles/main/main.css
+++ b/renderer/public/styles/main/main.css
@@ -1,11 +1,3 @@
-.MainPage_UserList {
-  padding: 30px;
-  text-align: center;
-  margin-top: 40px;
-  color: #3DA2FF;
-  /* width: 50%; */
-}
-
 .chatroomlist_div {
   text-align: center;
   margin: auto;
@@ -27,4 +19,26 @@
   display: inline-block;
   cursor: pointer;
   line-height: 80px;
+}
+
+.userlist_div {
+  margin-top: 220px;
+  width: 100%;
+}
+
+.userlist_article {
+  width: 30%;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.userlist_list {
+  display: flex;
+  justify-content: space-between;
+  font-size: larger;
+  cursor: pointer;
+  flex-wrap: wrap;
+  text-align: center;
 }
