전체적인 스타일링 적용 1차 완료 호버 및 트랜지션 효과 적용 페이지 라우팅 최적화 약간 진행 1대1 채팅에서 상대방이 없는 상태에서 채팅 메세지 보내기를 하면 오류 나는 것 수정 중

--- a/renderer/public/styles/layout/layout.css
+++ b/renderer/public/styles/layout/layout.css
@@ -10,8 +10,8 @@
   justify-content: space-between;
   font-family: 'GmarketSansMedium';
   color: #242443;
-  height: 160px;
-  border-bottom: 2px solid #8d8d8d;
+  height: 170px;
+  border-bottom: 2px solid #adadad;
   background-color: whitesmoke;
   z-index: 99;
 }
