--- a/renderer/public/styles/chat/chat.css
+++ b/renderer/public/styles/chat/chat.css
@@ -41,7 +41,7 @@
 }
 
 .chat-bubble {
-  border-radius: 20px 20px 20px 0;
+  border-radius: 30px 30px 30px 0;
   padding-left: 15px;
   padding-right: 15px;
   background-color: #0062be;
@@ -55,7 +55,7 @@
 
 .chat-bubble.right {
   margin-left: auto;
-  border-radius: 20px 20px 0 20px;
+  border-radius: 30px 30px 0 30px;
   background-color: #3DA2FF;
   color: white;
 }
@@ -142,13 +142,30 @@
 
 .privatechat_div {
   width: 100%;
-  margin-left: 50px;
-  margin-right: 50px;
+}
+
+.privatechat_userdiv {
+  display: flex;
+  text-align: center;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .privatechat_user {
   display: flex;
   text-align: center;
-  margin: 0 auto;
-  width: 100%;
+  cursor: pointer;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  transition: 0.5s;
+  border-radius: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.privatechat_user:hover {
+  background-color: #3DA2FF;
+  color: white;
+  transition: 0.5s;
 }
