1차적으로 완성 추가적인 최적화 작업 확인 후 진행 중 firestore 컬렉션 내부의 컬렉션 삭제 방법 모색 중

--- a/renderer/public/styles/main/main.css
+++ b/renderer/public/styles/main/main.css
@@ -28,13 +28,27 @@
   color: #3DA2FF;
 }
 
+.chatroomlist_delete {
+  margin-left: 20px;
+  color: red;
+  transition: 0.3s;
+  border-radius: 10px;
+  vertical-align: text-bottom;
+}
+
+.chatroomlist_delete:hover {
+  color: white;
+  background-color: #d33;
+  transition: 0.3s;
+}
+
 .userlist_div {
   margin-top: 220px;
   width: 100%;
 }
 
 .userlist_article {
-  width: 30%;
+  width: 33%;
   margin: 0 auto;
   padding-bottom: 30px;
   padding-left: 20px;
