--- a/renderer/public/styles/sign/sign.css
+++ b/renderer/public/styles/sign/sign.css
@@ -1,13 +1,13 @@
 .sign_input {
   width: 60%;
   height: 3.125rem;
-  margin: .625rem;
-  background: #F2F2F2;
-  border: .0625rem solid #3DA2FF;
-  border-radius: .4375rem;
+  margin: 0.625rem;
+  background: #f2f2f2;
+  border: 0.0625rem solid #3da2ff;
+  border-radius: 0.4375rem;
   border: none;
   padding-left: 1.25rem;
-  font-family: 'GmarketSansMedium';
+  font-family: "GmarketSansMedium";
   font-size: large;
   text-align: left;
 }
@@ -15,17 +15,17 @@
 .sign_title {
   font-weight: 1000;
   font-size: 1.5625rem;
-  font-family: 'GmarketSansMedium';
+  font-family: "GmarketSansMedium";
   letter-spacing: 0.2rem;
 }
 
 .sign_button {
   width: 18.875rem;
   height: 2.5rem;
-  margin: .625rem;
+  margin: 0.625rem;
   margin-top: 1.875rem;
   margin-bottom: 1.25rem;
-  background: #3DA2FF;
+  background: #3da2ff;
   border-radius: 24px;
   border: none;
   color: white;
@@ -33,12 +33,12 @@
   font-weight: 1000;
   font-size: 1.0625rem;
   letter-spacing: 0.2rem;
-  font-family: 'GmarketSansMedium';
+  font-family: "GmarketSansMedium";
   cursor: pointer;
 }
 
 .ant-input {
-  background: #F2F2F2;
+  background: #f2f2f2;
   border: none;
   text-align: left;
 }
@@ -49,11 +49,11 @@
   font-style: normal;
   font-weight: 1000;
   font-size: 1.125rem;
-  line-height: .9375rem;
-  color: #3DA2FF;
+  line-height: 0.9375rem;
+  color: #3da2ff;
   text-align: center;
   letter-spacing: 0.2rem;
-  font-family: 'GmarketSansMedium';
+  font-family: "GmarketSansMedium";
   cursor: pointer;
   text-decoration: underline;
 }
@@ -66,6 +66,15 @@
   text-align: left;
   padding-left: 4.375rem;
   color: red;
-  font-size: .8125rem;
-  font-family: 'GmarketSansMedium';
+  font-size: 0.8125rem;
+  font-family: "GmarketSansMedium";
+}
+
+.singIn_div {
+  width: 50%;
+  text-align: center;
+  display: inline-block;
+  padding-top: 100px;
+  font-family: "GmarketSansMedium";
+  margin-top: 5rem;
 }
