스타일링 수정

--- a/renderer/public/styles/sign/sign.css
+++ b/renderer/public/styles/sign/sign.css
@@ -70,6 +70,14 @@
   font-family: "GmarketSansMedium";
 }
 
+.singIn_error {
+  color: red;
+  font-weight: bolder;
+  font-family: "GmarketSansMedium";
+  padding-top: 0.625rem;
+  text-decoration: underline;
+}
+
 .singIn_div {
   width: 50%;
   text-align: center;
